--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background: url('123.png') no-repeat center center;
+    background: #0057b8;
     background-size: cover;
     color: white;
 }
